# projeto-markowitz

./: .env  .gitignore  0_Usuário.py  Dockerfile  README.md  app.py  auth.py  config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  utils.py
assets/csv/: example_ciclos.csv  example_sistec.csv  example_sistec2.csv
backend/: app.py  get_graph.py  mock_data.py
manager/: app_manager.py  cov_matrix.py  user_manager.py
pages/: 2_Ferramenta.py  about.py  add_portfolio.py  create_account.py  edit_portfolio.py  login.py  portfolio.py  reset_password.py  tool.py  user.py  wallets.py
server/: alembic.ini  depends.py  get_graph.py  get_selic.py  main.py  mock_data.py  plot.html  routes.py  schemas.py
server/db/: connection.py  models.py
server/db/db_data/: postmaster.pid
server/db/db_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
server/db/db_data/base/16384/: 1247  1249  1259  1259_fsm  16385  16388  16400  16403  16405  16406  16413  16416  16417  16426  2224  2579  2604  2606  2608  2610  2610_fsm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
server/db/db_data/base/5/: pg_internal.init
server/db/db_data/global/: 1260  1262  2671  pg_control  pg_internal.init
server/migrations/: env.py
server/migrations/versions/: 5c2a2a93da91_add_users_table_portifolios_and_stock.py
server/user/use_case/: auth_user.py
src/: App.css  App.tsx  app.controller.ts  app.module.ts  app.service.ts  main.jsx
src/app/: page.tsx
src/components/Layout/: Footer.jsx  NavList.jsx  Navbar.jsx
src/components/Misc/: BtnPrimary.jsx  InfoCard.jsx  LoadingComponent.jsx
src/components/Tool/: FilterForm.jsx  FilterPortfolio.jsx  FormSection.jsx  GraphSection.jsx  InfoSection.jsx
src/post/: post.module.ts  post.service.ts
src/routes/: App.jsx  ErrorPage.jsx  History.jsx  Layout.jsx  Portifolios.jsx
streamlit_authenticator/authenticate/authentication/: __init__.py
