[project]
name = "projeto-markowitz"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mateus Lopes Albano", email = "50590861+mateus-lopes@users.noreply.github.com"},
    {name = "mateus-lopes", email = "mateusalbano22@gmail.com"},
]
dependencies = [
    "streamlit>=1.33.0",
    "streamlit-authenticator>=0.3.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "pillow>=10.3.0",
    "rpds-py>=0.18.0",
    "pyarrow>=16.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
